--- a/index.html
+++ b/index.html
@@ -11,15 +11,18 @@
       href="https://fonts.googleapis.com/css2?family=Do+Hyeon&family=Jua&family=Nanum+Pen+Script&family=Noto+Sans+KR:wght@100..900&family=Roboto:ital,wght@0,100..900&display=swap"
       rel="stylesheet"
     />
+    <!-- Bootstrap 의존성 -->
     <link
       rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="style.css" />
+    <!-- CSS 의존성 -->
+    <link rel="stylesheet" href="resource/css/topnav.css" />
+    <link rel="stylesheet" href="resource/css/worldcup.css" />
   </head>
   <body>
     <div class="screen">
-      <div class="div">
+      <div class="menu">
         <nav
           class="navbar navbar-expand-md navbar-light bg-light custom-navbar"
         >
@@ -33,8 +36,8 @@
             <button
               class="navbar-toggler"
               type="button"
-              data-toggle="collapse"
-              data-target="#navbarNav"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarNav"
               aria-controls="navbarNav"
               aria-expanded="false"
               aria-label="Toggle navigation"
@@ -56,11 +59,39 @@
           </div>
         </nav>
       </div>
-      <!-- 새로운 요소 추가 -->
-    </div>
+      <!-- 제목 표시 -->
+      <div class="title-text" id="title-text">지금 가고 싶은 여행지는?</div>
 
+      <!-- 카드 선택 영역 -->
+      <div class="card-container" id="card-container">
+        <div class="card">
+          <img
+            src="https://github.com/programers-AIBE1/data-storage/blob/main/image/%ED%9D%91%EB%B0%B1%EA%B0%9C%EB%B0%9C%EC%9E%90.png?raw=true"
+            alt="이미지1"
+            width="100%"
+            height="90%"
+          />
+          <div class="card-body text-center">
+            <h5 class="card-title" id="item-title-0">1번</h5>
+          </div>
+        </div>
+        <div class="card">
+          <img
+            src="https://github.com/programers-AIBE1/data-storage/blob/main/image/%ED%9D%91%EB%B0%B1%EA%B0%9C%EB%B0%9C%EC%9E%90.png?raw=true"
+            alt="이미지2"
+            width="100%"
+            height="90%"
+          />
+          <div class="card-body text-center">
+            <h5 class="card-title" id="item-title-1">2번</h5>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- 현재 라운드 표시 -->
+    <div class="round-info" id="round-info">32강</div>
+
+    <script src="resource/js/worldcup.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </html>
