--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
         </nav>
       </div>
       <!-- 제목 표시 -->
-      <div class="title-text" id="title-text">지금 가고 싶은 여행지는?</div>
+      <div class="title-text" id="title-text">
+        <h2>지금 가고 싶은 여행지는?</h2>
+      </div>
 
       <!-- 카드 선택 영역 -->
       <div class="card-container" id="card-container">
@@ -90,7 +92,7 @@
     </div>
     <!-- 현재 라운드 표시 -->
     <div class="round-info" id="round-info">32강</div>
-
+    <!-- javascript 의존성 -->
     <script src="resource/js/worldcup.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
