--- a/worldcup.html
+++ b/worldcup.html
@@ -17,8 +17,8 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     />
     <!-- CSS 의존성 -->
-    <link rel="stylesheet" href="resource/css/topnav.css" />
-    <link rel="stylesheet" href="resource/css/worldcup.css" />
+    <link rel="stylesheet" href="./css/global.css" />
+    <link rel="stylesheet" href="./css/worldcup.css" />
   </head>
   <body>
     <div class="screen">
@@ -29,7 +29,7 @@
           <div class="container-fluid">
             <!-- 좌측: 로고 -->
             <a class="navbar-brand ms-3" href="#">
-              <img src="assets/logo.png" alt="로고" class="logo" />
+              <img src="./assets/logo.png" alt="로고" class="logo" />
             </a>
 
             <!-- 토글 버튼 (화면이 작을 때 메뉴 버튼으로 변경) -->
@@ -93,7 +93,7 @@
     <!-- 현재 라운드 표시 -->
     <div class="round-info" id="round-info">32강</div>
     <!-- javascript 의존성 -->
-    <script src="resource/js/worldcup.js"></script>
+    <script src="./js/worldcup.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </html>
