--- a/worldcup.html
+++ b/worldcup.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="./css/worldcup.css" />
   </head>
   <body>
-    <div class="screen">
+    <div class="screen-container">
       <div class="menu">
         <nav
           class="navbar navbar-expand-md navbar-light bg-light custom-navbar"
